--- a/templates/DjangoResponder/base.html
+++ b/templates/DjangoResponder/base.html
@@ -90,7 +90,7 @@
     "></div>
 
     <script>
-      mapboxgl.accessToken = 'pk.eyJ1IjoiamFrdWJidmFnbmVyIiwiYSI6ImNsdTE5NHhvYTAwMTgycXJ1YXg5cTI1eXIifQ.dvd36veM8ILq0U6lusajbg';
+      mapboxgl.accessToken = '';
       const map = new mapboxgl.Map({
         container: 'map',
         style: 'mapbox://styles/mapbox/streets-v11',
